# rules_rust

examples/bazel_env/: BUILD.bazel  MODULE.bazel
examples/bazel_env/env/: BUILD.bazel
rust/: toolchain.bzl
tools/rustfmt/: BUILD.bazel
tools/upstream_wrapper/: BUILD.bazel  README.md
tools/upstream_wrapper/src/: main.rs
