load("//rust:defs.bzl", "rust_binary", "rust_clippy", "rust_library")
load("//tools:tool_utils.bzl", "aspect_repository")

tools = {
    "rustfmt": "//rust/toolchain:current_rustfmt_toolchain_for_target",
}

# This is a small wrapper around the raw upstream binary which can be `bazel run`.

[
    rust_binary(
        name = "upstream_{}".format(tool_name),
        srcs = [
            "src/main.rs",
        ],
        data = [target],
        edition = "2018",
        rustc_env = {
            "WRAPPED_TOOL_NAME": tool_name,
            "WRAPPED_TOOL_TARGET": "$(rlocationpath {})".format(target),
        },
        toolchains = ["@rules_rust//rust/toolchain:current_rust_toolchain"],
        visibility = ["//visibility:public"],
        deps = [
            "//tools/runfiles",
        ],
    )
    for (tool_name, target) in tools.items()
]